--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "quasar-app-extension-ssg": "^5.1.1"
   },
   "engines": {
-    "node": "^18 || ^16 || ^14.19",
-    "npm": ">= 6.13.4",
+    "node": "^18.12",
+    "npm": ">= 9.8.1",
     "yarn": ">= 1.21.1"
   }
 }
