--- a/data/site-config.json
+++ b/data/site-config.json
@@ -3,5 +3,5 @@
   "title": "Curated site-list template",
   "subtitle": "Quickly build a site like this with just some configuration<br>You control all the content, icons, properties, and more",
   "linksRef": "sitelist",
-  "baseUrl": "https://jolly.tools/site-list"
+  "baseUrl": "https://site-list.jolly.tools"
 }
